--- a/Modules/Profile/image.htm
+++ b/Modules/Profile/image.htm
@@ -31,6 +31,8 @@
 
 <div id="previewbox" title="Your small image will look something like this"></div>
 
+<div id="debugbox"></div>
+
 
 </div>
 </body>
